# nervOct

./: .gitignore  CMakeLists.txt
cmake/: Config.cmake  Macros.cmake
data/: info.txt
debug/: gd_errfunc.session  nv_cgtrain.session  nv_costfunction.session  nv_matmult.session  nv_matmult_float.session  profiling_1.txt  profiling_2.txt  profiling_3.txt
docs/: changelog.txt  done.txt  todo.txt
docs/notes/: nervtrade.html
octave/: .octaverc  eval_strategy.m  nerv_setup.m  start.bat  test_logistic.m  test_neural.m  train_network_1.m  train_network_2.m  train_network_3.m  train_network_4.m  ufldl_ex1.m  ufldl_ex1_test2.m  ufldl_ex2.m  ufldl_ex3a.m  ufldl_ex3b.m  ufldl_ex4.m  ufldl_ex4_test.m  ufldl_ex5.m  ufldl_ex6.m  unit_tests.m
octave/RRL_test/: costFunction.m  eur_returns.txt  eur_sharpe.txt  eur_signal.txt  eur_wealth.txt  featureNormalize.m  push_back.m  rewardFunction.m  test1_eur_close_prices.txt  test1_eur_confidence.txt  test1_eur_ema_SR.txt  test1_eur_price_returns.txt  test1_eur_return_dev.txt  test1_eur_return_mean.txt  test1_eur_signals.txt  test1_eur_theoretical_returns.txt  test1_eur_theta_norm.txt  test1_eur_wealth.txt  testDAX.m  testDAX_part.m  testDAXv2.m  testEUR.m  testEUR1.m  testEURTest.m  test_signal.txt  test_wealth.txt  updateFt.m
octave/common/: applyNormalization.m  applyPCAReduction.m  buildFeatureMatrix.m  buildPriceMatrix.m  buildWeekFeatureMatrix.m  buildWeekFeatureMatrix_C.m  buildWeekLabelMatrix.m  buildWeekLabelMatrix_AtTime.m  buildWeekLabelMatrix_debug.m  buildWeekLabelMatrix_debug2.m  config.m  convertDataFiles.m  fmincg.orig.m  getMissingWeeks.m  loadData.m  pdual.m  plotLearningCurves.m  pnorm.m  sigmoid.m  sigmoidGradient.m  splitDataset.m  validateDataset.m  validateDatasetCollection.m
octave/logistic/: buildClassifier.m  buildFeatureMatrix.m  buildLabelVector.m  computeFeatureNormalization.m  costFunction.m  enum.m  evalTradingSample.m  evaluateLearning.m  evaluateStrategy.m  plotTradingEfficiencyCurve.m  plotTradingNumTransactionCurve.m  plotTradingProfitLossCurves.m  predictLabel.m  trainClassifier.m
octave/neural/: nnBuildLabelMatrix.m  nnCheckGradients.m  nnComputeLearningCurves.m  nnCostFunction.m  nnDebugInitializeWeights.m  nnEvaluateNetwork.m  nnInitNetwork.m  nnPredict.m  nnPrepareDebugTraining.m  nnPrepareTraining.m  nnRandInitializeWeights.m  nnRescaleParameters.m  nnSelectRandomNetwork.m  nnSparseInitializeWeights.m  nnTrainNetwork.m  nnTrainNetworkCUDA.m  nnTrainNetworkCUDA_orig.m  nnTrainNetworkNERV.m  tests_create_traits.m  tests_nn_cg_train.m  tests_nn_cg_train_cpu.m  tests_nn_cost_function.m  tests_nn_cost_function_cuda.m  tests_nn_gradient_descent.m  tests_trade_strategy.m  tests_trade_strategy_2.m  tests_train_bp.m  tests_training.m  tests_training_1.m  (+10 more)
scripts/: build_test_load.sh  build_train_bp.sh  nerv.sh  nerv_utils.sh  trade.sh  trade_utils.sh
sources/: CMakeLists.txt
sources/nervMBP/src/: CMakeLists.txt  CalculateRMS.cu  CorrectWeightsKernel.cu  FireLayerNeuronsKernel.cu  SumKernel.cu  nervmbp.cpp  nervmbp.def
sources/sgtCore/src/: CMakeLists.txt  Object.cpp  Observer.cpp  Referenced.cpp  sgtcore.cpp
sources/sgtCore/src/log/: FileLogger.cpp  LogManager.cpp  LogRecord.cpp  LogSink.cpp  StdLogger.cpp
sources/sgtCore/src/math/: MatrixDecomposition.cpp  Matrix_implementation.impl  Matrixd.cpp  Matrixf.cpp  Quat.cpp
sources/sgtTests/src/: CMakeLists.txt  main.cpp  sgt_math.cpp
sources/test_nervcuda/src/: BPTraits_spec.cpp  CMakeLists.txt  basics_spec.cpp  gpu_perfs_spec.cpp  gradient_descent_spec.cpp  main.cpp  mat_elem_col_mult_spec.cpp  mat_vec_mult_spec.cpp  predict_spec.cpp  rand_weights_spec.cpp  spae_kl_divergence_spec.cpp  spae_sparse_delta_spec.cpp  strategy_manager_spec.cpp  train_backprop_spec.cpp
(+191 files in other folders)
