SET(TARGET_NAME "nervMBP")
SET(TARGET_DIR "bin/${ARCHMODEL}")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtCore/include)

INCLUDE_DIRECTORIES(${CUDA_INC_DIR})
LINK_DIRECTORIES (${CUDA_LIB_DIR})

# INCLUDE_DIRECTORIES(${GPUMLIB_INC_DIR})
# LINK_DIRECTORIES (${GPUMLIB_LIB_DIR})

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-DNERVMBP_LIBRARY)

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" "*.cu" )

# ADD_MSVC_PRECOMPILED_HEADER("nervmbp.h" "nervmbp.cpp" SOURCE_FILES)

# ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES})
CUDA_ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES})

# TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtCore ${CUDA_LIBS} ${GPUMLIB_LIBS})
TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtCore ${CUDA_LIBS})

COMPRESS_BINARY_TARGET()

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

