SET(TARGET_NAME "test_nervcuda")
SET(TARGET_DIR "bin/${ARCHMODEL}")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../nervCUDA/include)
INCLUDE_DIRECTORIES (../../sgtCore/include)

INCLUDE_DIRECTORIES(${CUDA_INC_DIR})
LINK_DIRECTORIES (${CUDA_LIB_DIR})

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_EXECUTABLE (${TARGET_NAME} ${PUBLIC_HEADERS} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${CUDA_LIBS})

COMPRESS_BINARY_TARGET()

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})
